src/components/navigation/navbar/Navbar.module.css
.appbar, .logo_list, .anchorlinks_list{
    display: flex;
    flex-direction: row;
    align-items: center;
    list-style: none;
}

.appbar{
    justify-content: space-between;
    padding: 1rem 0;
    margin: 0;
    font-family: "poppins", Arial, Helvetica, sans-serif;
    position: fixed;
    width: 100%;
    top: 0;
    left: 0;
    z-index: 1000;
    height: 10%;
}

.appbar_anchor{
    background: #6e59c9b9;
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
}

.logo_list{
    padding: 1rem 2rem;
    justify-content: space-between;
}

.anchorlinks_list{
    padding: 0 2rem;
    justify-content: space-evenly;
    width: 50%;
    margin: 0 2rem;
    flex-wrap: wrap;
}

.anchorlinks_list .list_item a{
    text-decoration: none;
    text-transform: capitalize;
    font-size: 1.35rem;
    font-weight: 400;
    color: #010101;
}

.anchorlinks_list .list_item a{
    text-decoration: none;
    text-transform: capitalize;
    font-size: 1rem;
    font-weight: 500;
}

.anchorlinks_list .list_item a:hover{
    font-weight: 600;
}

.anchorlinks_list .list_item:last-child a{
    background-color: #50B498;
    padding: 0.5rem 1.5rem;
    color: #F5F5F5;
    border-radius: 0.4rem;
    display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
   gap: 0.5rem;
   transition: 0.2s
}

.anchorlinks_list .list_item:last-child a:hover{
    box-shadow: 0 4px 8px #00000033;
    background-color: #4bc7a4;
    transition: 0.4s;
}

.barIcon{
    display: none;
}

@media (max-width: 768px){

    .appbar{
        flex-direction: column;
        background-color: #5d46c5;
        padding: 0;
    }

    .logo_list{
        width: 100%;
        justify-content: space-around;
    }

    .barIcon{
        display: block;
        color: #F5F5F5
    }

    .anchorlinks_list.show{
        display: flex !important;
    }

    .anchorlinks_list{
        display: none;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        font-size: 1.1rem;
        margin: 1rem auto;
        padding: 1rem;
    }

    .anchorlinks_list .list_item{
       margin: 0.5rem 0;
       color: #F5F5F5
    }

    .anchorlinks_list .list_item a{
        color: #F5F5F5
     }

    .anchorlinks_list .list_item:last-child{
        margin: 2rem 0
     }

     .anchorlinks_list .list_item:last-child a{
        font-size: 1.2rem;
     }
}


@media (min-width: 769px) and  (max-width: 1024px){
    .anchorlinks_list{
        display: flex;
        flex-direction: row;
        justify-content: space-evenly;
        width: 60%;
        margin: 0 2rem;
        flex-wrap: nowrap;
    }
}

